--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,15 @@ on:
 jobs:
   test-code:
     runs-on: ubuntu-22.04
-
+    services:
+      mongo:
+        image: mongo
+        
+        ports:
+          - 27017:27017
+        env:
+          MONGO_INITDB_ROOT_USERNAME: root
+          MONGO_INITDB_ROOT_PASSWORD: example
     steps:
       - name: checkout code
         uses: actions/checkout@v3
@@ -18,12 +26,12 @@ jobs:
           python-version: 3.8
       - name: install requirements.txt
         run: pip install -r requirements.txt
-      - name: create mongodb container
-        run: |
-          docker run -d -p 27017:27017 --name some-mongo \
-          -e MONGO_INITDB_ROOT_USERNAME=root \
-          -e MONGO_INITDB_ROOT_PASSWORD=example \
-          mongo
+      #- name: create mongodb container
+      #  run: |
+      #    docker run -d -p 27017:27017 --name some-mongo \
+      #    -e MONGO_INITDB_ROOT_USERNAME=root \
+      #    -e MONGO_INITDB_ROOT_PASSWORD=example \
+      #    mongo
       - name: run pytest
         id: run-pytest
         run: pytest
