--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,10 +8,11 @@ on:
 jobs:
   test-code:
     runs-on: ubuntu-22.04
+    container: python:3.8.18-bullseye
     services:
       mongo:
         image: mongo
-        
+
         ports:
           - 27017:27017
         env:
@@ -20,10 +21,10 @@ jobs:
     steps:
       - name: checkout code
         uses: actions/checkout@v3
-      - name: set up py
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.8
+      #- name: set up py
+      #  uses: actions/setup-python@v4
+      #  with:
+      #    python-version: 3.8
       - name: install requirements.txt
         run: pip install -r requirements.txt
       #- name: create mongodb container
