--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,11 @@ on:
 jobs:
   test-code:
     runs-on: ubuntu-22.04
+    environment: test
+    env:
+      MONGO_URL: ${{ secrets.MONGO_URL }}
+      MONGO_USER: ${{ vars.MONGO_USER }}
+      MONGO_PASSWORD: ${{ secrets.MONGO_PASSOWRD }}
     container: python:3.8.18-bullseye
     services:
       mongo:
@@ -16,8 +21,8 @@ jobs:
         ports:
           - 27017:27017
         env:
-          MONGO_INITDB_ROOT_USERNAME: root
-          MONGO_INITDB_ROOT_PASSWORD: example
+          MONGO_INITDB_ROOT_USERNAME: env.MONGO_USER
+          MONGO_INITDB_ROOT_PASSWORD: env.MONGO_PASSWORD
     steps:
       - name: checkout code
         uses: actions/checkout@v3
