--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,8 +21,8 @@ jobs:
         ports:
           - 27017:27017
         env:
-          MONGO_INITDB_ROOT_USERNAME: env.MONGO_USER
-          MONGO_INITDB_ROOT_PASSWORD: env.MONGO_PASSWORD
+          MONGO_INITDB_ROOT_USERNAME: ${{ vars.MONGO_USER }}
+          MONGO_INITDB_ROOT_PASSWORD: ${{ secrets.MONGO_PASSOWRD }}
     steps:
       - name: checkout code
         uses: actions/checkout@v3
