--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -12,7 +12,7 @@ jobs:
       DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
     steps:
       - name: checkout code
-        run: actions/checkout@v3
+        uses: actions/checkout@v3
       - name: docker login
         run: |
           echo $DOCKER_HUB_TOKEN > my_password.txt
