--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -16,7 +16,7 @@ jobs:
       - name: docker login
         run: |
           echo $DOCKER_HUB_TOKEN > my_password.txt
-          cat ~/my_password.txt | docker login --username $DOCKER_USERNAME --password-stdin
+          cat my_password.txt | docker login --username $DOCKER_USERNAME --password-stdin
       - name: build iamge
         run: |
           docker image build -t hj212223/fastapi-python:latest .
