--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -13,12 +13,18 @@ jobs:
     steps:
       - name: checkout code
         uses: actions/checkout@v3
-      - name: docker login
-        run: |
-          echo $DOCKER_HUB_TOKEN > my_password.txt
-          cat my_password.txt | docker login --username $DOCKER_USERNAME --password-stdin
-      - name: build iamge
-        run: |
-          docker image build -t hj212223/fastapi-python:latest .
-      - name: push image
-        run: docker image push hj212223/fastapi-python:latest
+      - name: uses user github aciton
+        uses: sanyuanya/github-action-docker@master
+        with:
+          docker_hub_token: $DOCKER_HUB_TOKEN
+          docker_username: $DOCKER_USERNAME
+          image_name: fastapi-python:latest
+      # - name: docker login
+      #   run: |
+      #     echo $DOCKER_HUB_TOKEN > my_password.txt
+      #     cat my_password.txt | docker login --username $DOCKER_USERNAME --password-stdin
+      # - name: build iamge
+      #   run: |
+      #     docker image build -t hj212223/fastapi-python:latest .
+      # - name: push image
+      #   run: docker image push hj212223/fastapi-python:latest
